--- a/miniprogram/styles/variables.scss
+++ b/miniprogram/styles/variables.scss
@@ -47,6 +47,7 @@ $font-weight-bold: 600;       // 粗体
 $font-weight-bolder: 700;     // 更粗
 
 // 行高
+$line-height-tight: 1.2;      // 紧凑行高
 $line-height-sm: 1.2;         // 紧凑行高
 $line-height-base: 1.4;       // 基础行高
 $line-height-lg: 1.6;         // 宽松行高
