--- a/miniprogram/styles/mixins.scss
+++ b/miniprogram/styles/mixins.scss
@@ -37,6 +37,12 @@
   flex-direction: column;
 }
 
+// Flexbox 行布局
+@mixin flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
 // 绝对定位居中
 @mixin absolute-center {
   position: absolute;
@@ -230,6 +236,38 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+// 从左滑入动画
+@mixin slide-in-left($duration: $transition-duration-base) {
+  animation: slideInLeft $duration $transition-timing-function;
+}
+
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-60rpx);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+// 从右滑入动画
+@mixin slide-in-right($duration: $transition-duration-base) {
+  animation: slideInRight $duration $transition-timing-function;
+}
+
+@keyframes slideInRight {
+  from {
+    opacity: 0;
+    transform: translateX(60rpx);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
 
