--- a/miniprogram/styles/variables.scss
+++ b/miniprogram/styles/variables.scss
@@ -19,6 +19,7 @@ $text-secondary: #666666;     // 次要文字
 $text-tertiary: #999999;      // 辅助文字
 $text-white: #FFFFFF;         // 白色文字
 $text-disabled: #CCCCCC;      // 禁用文字
+$text-placeholder: #CCCCCC;   // 占位符文字
 
 // 背景颜色
 $background-primary: #FFFFFF;  // 主背景
